--- a/style.css
+++ b/style.css
@@ -303,12 +303,46 @@ header{
 	}
 
 	.txt h1{
-		font-size: 40px;
+		font-size: 35px;
+		line-height: 30px;
 	}
 	.txt p{
 		font-size: 13px;
 	}
 
+.container img{
+	width: 30%;
+	height: 200px;
+	}
+	.about h2{
+	font-size: 25px;
+	padding-bottom: 10px;
+}
+  .about h4{
+	font-size: 12px;
+}
+.about{
+	padding: 20px;
+}
+.container{
+	margin: 100px 40px;
+}
+
+.btn{
+	padding: 5px 10px;
+	font-size: 15px;
+	margin-top: 10px;
+}
+.slider{
+	width: 100%;
+	height: 500px;
+}
+.content-header{
+	margin-right: 20px;
+}
+.content-header a{
+  font-size: 12px;
+}
 }
 /* /5 */
 
@@ -324,6 +358,20 @@ header{
 	.sign a{
 		font-size: 12px;
 	}
+	
+	.container img{
+	width: 30%;
+	height: 300px;
+	}
+	
+	.about h2{
+	font-size: 25px;
+	padding-bottom: 10px;
+}
+  .about h4{
+	font-size: 12px;
+}
+	
 }
 /* /6 */
 
