--- a/css/product-details.css
+++ b/css/product-details.css
@@ -23,30 +23,33 @@ body {
     padding: 0;
 }
 
-/* Styles for the header */
 nav {
+    background-color: rgba(64, 64, 64, 1);
     width: 100%;
     position: fixed;
     top: 0;
     z-index: 2;
-    padding: 25px 4%; /* Reduzindo o padding para manter a altura */
+    padding: 10px 4%; /* Reduzindo o padding para manter a altura */
     transition: all .3s ease;
-    background-color: rgba(64, 64, 64, 1);
 }
+
+
 
 nav.roll {
     background-color: rgba(64, 64, 64, 1);
-    padding: 20px 2%;
+    padding: 10px 2%;
 }
 
 nav ul{
 	display: flex;
 	align-items: center;
+	
 }
 
 nav li{
 	list-style-type: none;
 	padding: 1rem;
+	font-size: 20px;
 }
 
 .navbar-toggle{
@@ -59,6 +62,84 @@ nav li{
 .navbar-toggle:hover{
 	color: rgb(255, 102, 0);
 	font-size: 36px;
+}
+
+
+
+#logo {
+    margin-left: 40px;
+    margin-right: auto; /* Margem à direita para manter a logo à esquerda */
+    display: inline-block;
+    cursor: pointer;
+    font-size: 32px;
+    font-weight: bold;
+    color: rgb(255, 102, 0); /* Cor da logo */
+    transition: all 0.3s ease;
+    vertical-align: middle; /* Alinhamento vertical com os itens do content-header */
+}
+
+#logo:hover {
+    color: #eef9ff; /* Cor ao passar o mouse */
+}
+
+#logo-s {
+    color: #eef9ff; /* Cor do texto complementar */
+    margin-left: 5px;
+    transition: all 0.3s ease;
+}
+
+#logo:hover #logo-s {
+    color: rgb(255, 102, 0); /* Cor do texto complementar ao passar o mouse */
+}
+
+.content-header {
+    margin-right: 40px; /* Espaço entre o conteúdo e o logo */
+}
+
+
+.content-header a {
+    /* Mantém a formatação original */
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    position: relative;
+    padding: 0.2rem;
+    margin-left: 20px; /* Espaço entre os itens */
+    margin-right: 20px; /* Espaço entre os itens */
+}
+
+
+.act {
+    /* Mantém a formatação original */
+    border: 2px solid #fff;
+    border-radius: 50px;
+    padding: 6px 15px;
+}
+
+.ch::after {
+    /* Mantém a formatação original */
+    content: " ";
+    width: 0%;
+    height: 2px;
+    background-color: rgb(255, 102, 0);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: all 0.3s ease;
+}
+
+.content-header a:hover {
+    /* Mantém a formatação original */
+    color: rgb(255, 102, 0);
+    border-color: rgb(255, 102, 0);
+}
+
+.ch:hover::after {
+    /* Mantém a formatação original */
+    width: 100%;
+    color: rgb(255, 102, 0);
+    border-color: rgb(255, 102, 0);
 }
 
 #logo {
