--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ nav {
 
 nav.roll {
     background-color: rgba(64, 64, 64, 1);
-    padding: 20px 2%;
+    padding: 10px 2%;
 }
 
 nav ul{
@@ -104,10 +104,20 @@ nav li{
 
 
 .act {
-    /* Mantém a formatação original */
     border: 2px solid #fff;
     border-radius: 50px;
     padding: 6px 15px;
+    display: inline-flex; /* Para alinhar o ícone e o texto horizontalmente */
+    align-items: center; /* Para alinhar verticalmente ao centro */
+}
+
+.act i {
+	font-size: 20px;
+    margin: 0 8px; /* Espaçamento entre o ícone e o texto */
+}
+
+#userName{
+	margin-right: 8px;
 }
 
 .ch::after {
@@ -280,10 +290,24 @@ nav li{
 	margin: 200px 200px;
 }
 
-.container img{
-	width: 50%;
-	height: 500px;
+@keyframes float {
+    0% {
+        transform: translateY(10px);
+    }
+    50% {
+        transform: translateY(-20px); /* Ajuste a quantidade de movimento para cima */
+    }
+    100% {
+        transform: translateY(10px);
+    }
 }
+
+.container img {
+    width: 60%;
+    height: 600px;
+    animation: float 3s ease-in-out infinite; /* Ajuste a duração da animação conforme necessário */
+}
+
 
 .about{
 	padding: 100px;
@@ -364,6 +388,7 @@ nav li{
 }
 
 .card{
+	cursor: pointer;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -574,7 +599,7 @@ nav li{
 	}
 	.titulo-produtos{
 		margin-top: 120px;
-		font-size: 50px;
+		font-size: 50px
 	}
 	
 	.produtos{
