--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ nav li{
 	padding: 5px 0;
 	font-size: 24px;
     margin: 0 0 0 8px; /* Espaçamento entre o ícone e o texto */
+	
 }
 
 #userName{
@@ -147,6 +148,141 @@ nav li{
     color: rgb(255, 102, 0);
     border-color: rgb(255, 102, 0);
 }
+
+.no{
+	display: none;
+}
+
+.cart-icon {
+    position: relative;
+    display: inline-block;
+	font-size:24px;
+	color: white;
+	transition: all .3s ease;
+}
+
+.cart-icon:hover .fa-shopping-cart{
+	color: rgb(255, 102, 0);
+}
+
+.quantity {
+    background-color: rgb(255, 102, 0);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    position: absolute;
+    top: -10px;
+    right: -15px;
+    padding: 3px 10px;
+    font-size: 14px;
+    font-weight: bold;
+	transition: all .3s ease;
+}
+
+.cart-icon:hover .quantity{
+	color: rgb(255, 102, 0);
+	background-color: white;
+}
+
+.cart-card {
+    display: none; /* Escondido por padrão */
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 400px;
+    height: 100%;
+    background-color: rgb(64, 64, 64);
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.cart-card .inner {
+    padding: 20px;
+    box-sizing: border-box;
+    height: 100%;
+    overflow-y: auto;
+}
+
+.cart-card h2 {
+	color: rgb(255, 102, 0);
+    margin-bottom: 20px;
+    font-size: 24px;
+}
+
+.cart-item {
+    color: #fff; /* Cor do texto em branco */
+    margin-bottom: 10px; /* Espaçamento entre os itens */
+}
+
+.cart-item span {
+    margin-bottom: 5px; /* Adicionando margem inferior ao texto do produto */
+}
+
+.cart-item-buttons {
+    display: flex;
+	align-items: center;
+     /* Distribui o espaço entre os botões */
+}
+
+.cart-item-buttons button {
+	padding: 1px 7px;
+	margin: 5px;
+    font-size: 20px; /* Tamanho da fonte dos botões */
+	font-weight: 600;
+    cursor: pointer;
+    border: none;
+    border-radius: 100%; /* Arredondar cantos dos botões */
+    background-color: rgb(255, 102, 0); /* Cor do botão de adicionar */
+    color: #FFFFFF; /* Cor do texto do botão */
+    transition: all .3s ease;
+}
+
+.cart-item-buttons button:hover {
+    background-color: white; /* Cor do botão ao passar o mouse */
+    color: rgb(255, 102, 0);
+}
+
+.cart-buttons {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cart-buttons button {
+    width: 50%;
+    padding: 10px 0;
+    font-size: 20px;
+    cursor: pointer;
+    border: none;
+}
+
+#close-cart{
+    background-color: rgb(255, 102, 0);
+    color: white;
+	transition: all .3s ease;
+}
+
+#total-price{
+	background-color: white;
+	color: rgb(255, 102, 0);
+	transition: all .3s ease;
+}
+
+#close-cart:hover{
+    background-color: white;
+    color: rgb(255, 102, 0);
+}
+
+#total-price:hover{
+	background-color: rgb(255, 102, 0);
+    color: white;
+}
+
+
 
 /* /1 */
 
@@ -514,7 +650,10 @@ nav li{
 		display: block;
 	}
 
-	
+	.fa-shopping-cart{
+		display: none;
+	}
+
     .slider {
         height: 50vh; /* Metade da altura original */
     }
@@ -700,6 +839,10 @@ nav li{
 
 	.activo{
 		display: block;
+	}
+
+	.fa-shopping-cart{
+		display: none;
 	}
 
 	.act {
