--- a/css/style.css
+++ b/css/style.css
@@ -750,28 +750,33 @@ nav li{
 
 	.card{
 		padding: 1rem;
-		max-width: 330px; /* Ajuste o tamanho conforme necessário */
+		max-width: 200px; /* Ajuste o tamanho conforme necessário */
 		margin-bottom: 1rem;
+		flex-direction: column;
 	}
 
 	.card:hover{
-		max-width: 350px; /* Ajuste o tamanho conforme necessário */
+		max-width: 230px; /* Ajuste o tamanho conforme necessário */
 	}
 	
 	.card img{
-		max-width: 50%; /* Ajuste a largura conforme necessário */
-		margin-right: 0.5rem;
+		margin: 0;
+		max-width: 90%; /* Ajuste a largura conforme necessário */
 	}
 	
+	.card-content{
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+	}
+
 	.card h3{
-		margin-bottom: 5px;
-		font-size: 16px;
+		margin: 10px 0;
+		font-size: 14px;
 	}
 	
 	.card h5{
-		color: #fff;
-		margin-bottom: 10px;
-		font-size: 11px;
+		display: none;
 	}
 	
 	.card a{
@@ -782,7 +787,7 @@ nav li{
 		text-decoration: none;
 		font-weight: 600;
 		transition: all 0.3s ease;
-		align-self: flex-start; /* Alinha o botão à esquerda */
+		align-self: center;
 	}
 	
 	.card a:hover{
@@ -951,19 +956,22 @@ nav li{
 
 	.card{
 		padding: 1rem;
-		max-width: 300px; /* Ajuste o tamanho conforme necessário */
+		max-width: 180px; /* Ajuste o tamanho conforme necessário */
 		border-radius: 45px;
 		margin-bottom: 3rem;
 	}
 	
+	.card:hover{
+		max-width: 200px;
+	}
+
 	.card img{
-		max-width: 45%; /* Ajuste a largura conforme necessário */
-		margin-right: 0.5rem;
+		max-width: 90%; /* Ajuste a largura conforme necessário */
 	}
 	
 	.card h3{
-		margin-bottom: 5px;
-		font-size: 16px;
+		margin: 10px 0;
+		font-size: 14px;
 	}
 	
 	.card h5{
@@ -981,7 +989,7 @@ nav li{
 		text-decoration: none;
 		font-weight: 600;
 		transition: all 0.3s ease;
-		align-self: flex-start; /* Alinha o botão à esquerda */
+		align-self: center; /* Alinha o botão à esquerda */
 	}
 	
 	.card a:hover{
