--- a/css/style.css
+++ b/css/style.css
@@ -540,7 +540,7 @@ nav li{
 .destaque-produto h2 {
     font-size: 64px;
     font-weight: 700;
-    color: rgb(255, 102, 0);
+    color: #fff;
 }
 
 .destaque-produto b {
@@ -561,6 +561,7 @@ nav li{
     font-size: 22px;
     color: #fff;
     font-weight: 600;
+	opacity: 0.5;
 }
 
 
@@ -736,6 +737,101 @@ nav li{
     color: #888;
 }
 
+.skills{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	color: rgb(64, 64, 64);
+	background-color: rgb(97, 97, 97);
+}
+
+.skills-container{
+	margin: 150px 200px;
+}
+
+.skills h2{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	color: rgb(255, 102, 0);
+	font-size: 18px;
+}
+
+.separation{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: row;
+	margin-top: 5px;
+}
+
+.separation ion-icon{
+	color: rgb(255, 102, 0);
+	font-size: 18px;
+	margin: 2px;
+}
+
+.line{
+	border: 1px solid rgb(255, 102, 0);
+	width: 40px;
+}
+
+.skills h1{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	color: #fff;
+	font-size: 60px;
+	margin: 40px 0;
+}
+
+.skills ul{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 50px 0;
+}
+
+.skills ul li{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+	flex-wrap: wrap;
+	color: #fff;
+	margin: 30px;
+	background-color: rgb(64, 64, 64);
+	box-shadow: 0px 0px 6px rgba(255, 255, 255, 0.3);
+	width: 400px;
+	height: 400px;
+	padding: 30px;
+	transition: all 1s ease;
+}
+
+.skills ul li:hover{
+	height: 450px;
+}
+
+.skills ul li ion-icon{
+	color: rgb(255, 102, 0);
+	font-size: 80px;
+}
+
+.skills ul li h3{
+	margin: 15px 0;
+	font-size: 40px;
+}
+
+.skills ul li h5{
+	font-size: 16px;
+	opacity: 0.5;
+}
+
+
 .footer{
 	margin-top: 200px;
 	position: relative;
@@ -808,28 +904,28 @@ nav li{
 }
 
 .footer .wave#wave1{
-	z-index: 1000;
+	z-index: 999;
 	opacity: 1;
 	bottom: 0;
 	animation: animateWave 4s linear infinite;
 }
 
 .footer .wave#wave2{
-	z-index: 999;
+	z-index: 998;
 	opacity: 0.5;
 	bottom: 10px;
 	animation: animateWave_02 4s linear infinite;
 }
 
 .footer .wave#wave3{
-	z-index: 1000;
+	z-index: 999;
 	opacity: 0.2;
 	bottom: 15px;
 	animation: animateWave 3s linear infinite;
 }
 
 .footer .wave#wave4{
-	z-index: 999;
+	z-index: 998;
 	opacity: 0.7;
 	bottom: 20px;
 	animation: animateWave_02 3s linear infinite;
